--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!doctype html>
+<html lang="en">
+
+<head>
+  <title>Enri Portfolio</title>
+</head>
+
+<body>
 <src="ER_portfolio.pdf">
+</body>
+
+</html>
